--- a/sites/all/modules/custom/md_commerce_filter/css/product-filter-price.css
+++ b/sites/all/modules/custom/md_commerce_filter/css/product-filter-price.css
@@ -16,7 +16,7 @@
 }
 
 .filter-price-slider .ui-slider .ui-slider-range {
-    background: #ffa200;
+    background: #005daf;
     border: none;
     display: block;
     height: 100%;
