--- a/sites/all/themes/md_hosoren/less/coding/maintenance-mode.less
+++ b/sites/all/themes/md_hosoren/less/coding/maintenance-mode.less
@@ -86,7 +86,7 @@
   font-size: 20px;
 }
 .comming-soon footer  .list-socials a:hover {
-  color: #005daf;
+  color: @active_color;
 }
 .list-socials {
     display: inline-block;
