--- a/sites/all/themes/md_hosoren/less/coding/md-megamenu-megamenu-user.less
+++ b/sites/all/themes/md_hosoren/less/coding/md-megamenu-megamenu-user.less
@@ -46,7 +46,7 @@
 .account-icon a.awemenu-item-link:hover,
 .wishlist-icon a.awemenu-item-link:hover,
 .cart-icon a.awemenu-item-link:hover{
-    color: #005daf !important;
+    color: @active_color !important;
     background: transparent !important;
     box-shadow: none !important;
 }
@@ -68,7 +68,7 @@
     color: #333;
 }
 .account-icon .awemenu-megamenu-wrapper .header-account h4 a:hover{
-    color: #005daf;
+    color: @active_color;
 }
 .account-icon .awemenu-megamenu-wrapper .header-account ul li{
     padding: 0;
@@ -80,7 +80,7 @@
     font-size: 14px;
 }
 .account-icon .awemenu-megamenu-wrapper .header-account ul li a:hover{
-    color: #005daf !important;
+    color: @active_color !important;
 }
 
 .wishlist-icon .awemenu-megamenu-wrapper,
@@ -111,7 +111,7 @@
 }
 .wishlist-icon ul.whishlist .whishlist-item h3 a:hover,
 .cart-icon ul.whishlist .whishlist-item h3 a:hover{
-    color: #005daf;
+    color: @active_color;
 }
 .wishlist-icon .whishlist-action a{
     color: #333;
@@ -138,7 +138,7 @@
     padding: 0px 15px 10px 0;
 }
 .account-icon .awemenu-megamenu-wrapper .submenu.dropdown li a:hover{
-    color: #005daf;
+    color: @active_color;
 }
 .md-megamenu-megamenu-user{
     z-index: 998;
