--- a/sites/all/themes/md_hosoren/less/coding/md-megamenu.less
+++ b/sites/all/themes/md_hosoren/less/coding/md-megamenu.less
@@ -99,7 +99,7 @@ and open the template in the editor.
 /*
 .md-megamenu-megamenu .awemenu-default.awemenu-standard .awemenu .awemenu-item:hover > a{
     background-color: transparent;
-    color:#005daf;
+    color:@active_color;
 }
 .md-megamenu-megamenu .awemenu-default.awemenu-standard .awemenu, .md-megamenu-mega-main-menu-style4 .awemenu-default.awemenu-standard .awemenu{
     border-bottom: solid 1px #e1e1e1; 
@@ -141,10 +141,10 @@ and open the template in the editor.
 
 
 .awemenu-megamenu-wrapper a:hover {
-    color: #005daf;
+    color: @active_color;
 }
 .awemenu-nav .awemenu-megamenu-wrapper a:hover {
-    color: #005daf!important;
+    color: @active_color!important;
 }
 
 
@@ -272,7 +272,7 @@ and open the template in the editor.
     color: #333;
 }
 .header-style-4 .md-megamenu-mega-main-menu-style4 ul.awemenu > li.awemenu-item:hover span.awemenu-item-title{
-    color: #005daf;
+    color: @active_color;
     -webkit-transition: color .3s ease,background-color .3s ease;
     -o-transition: color .3s ease,background-color .3s ease;
     transition: color .3s ease,background-color .3s ease;
