btn color on slider - blue

--- a/sites/all/themes/md_hosoren/css/style.css
+++ b/sites/all/themes/md_hosoren/css/style.css
@@ -18506,12 +18506,12 @@ ul li {
   font-family: FCK;
 }
 .btn-primary,
-.md-objects a {
+.fdsfds a {
   background-color: #005daf;
   border-color: #005daf;
 }
 .btn-primary:hover,
-.md-objects a:hover {
+.fdsfds a:hover {
   background: #006dbf;
   border-color: #006dbf;
 }
