--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -49,3 +49,4 @@
 //----------------------------
 @import 'coding/base.less';
 @import 'coding/buttons.less';
+@import 'coding/categories_list.less';
