editing menu-interface

--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -50,3 +50,4 @@
 @import 'coding/base.less';
 @import 'coding/buttons.less';
 @import 'coding/categories_list.less';
+@import 'coding/toolbar.less';
