--- a/sites/all/modules/contrib/commerce_discount/scss/_mixins.scss
+++ b/sites/all/modules/contrib/commerce_discount/scss/_mixins.scss
@@ -78,6 +78,9 @@ $azure: #d2eeff;
     float: left; // LTR
     width: auto;
 
+    .description {
+      display: none;
+    }
     .form-item {
       padding: 0;
     }
