--- a/sites/all/modules/contrib/commerce_discount/scss/commerce_discount.scss
+++ b/sites/all/modules/contrib/commerce_discount/scss/commerce_discount.scss
@@ -107,6 +107,7 @@
     label {
       border-bottom: 1px solid $gray2;
       padding-left: 5px; // LTR
+
     }
 
     .form-radios {
@@ -133,10 +134,6 @@
     }
   }
 
-  .commerce-offer-fields-wrapper {
-    float: left;
-  }
-
   .form-wrapper .form-wrapper {
     .form-item {
       margin-bottom: 2px;
@@ -148,6 +145,11 @@
         padding-left: 0;
       }
     }
+  }
+
+  .commerce-offer-fields-wrapper {
+    float: left; // LTR
+
   }
 }
 
@@ -309,8 +311,4 @@
       }
     }
   }
-}
-
-.field-name-commerce-compatibility-strategy .field-widget-options-buttons .form-wrapper {
-  clear: both;
 }
