--- a/sites/all/themes/md_hosoren/less/coding/libs/main.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/main.less
@@ -1913,7 +1913,7 @@ img {
 }
 
 .alert-warning {
-  background-color: #FCA13F;
+  background-color: @active_color;
   border-color: transparent;
   color: #fff;
 }
@@ -1927,13 +1927,13 @@ img {
 }
 
 .alert-warning.alert-outline {
-  color: #FCA13F;
+  color: @active_color;
   background-color: transparent;
-  border-color: #FCA13F;
+  border-color: @active_color;
 }
 
 .alert-warning.alert-outline .close {
-  color: #FCA13F;
+  color: @active_color;
 }
 
 .alert-danger {
@@ -2647,8 +2647,8 @@ img {
 
 .btn-warning {
   color: #fff;
-  background-color: #FCA13F;
-  border-color: #FCA13F;
+  background-color: @active_color;
+  border-color: @active_color;
 }
 
 .btn-warning:focus,
@@ -2698,15 +2698,15 @@ img {
 }
 
 .btn-warning.btn-outline {
-  color: #FCA13F;
-  border-color: #FCA13F;
+  color: @active_color;
+  border-color: @active_color;
   background: transparent;
 }
 
 .btn-warning.btn-outline:hover {
   color: #fff;
-  border-color: #FCA13F;
-  background: #FCA13F;
+  border-color: @active_color;
+  background: @active_color;
 }
 
 .btn-warning.btn-outline:active,
@@ -3056,7 +3056,7 @@ img {
 }
 
 .progress-bar-warning {
-  background-color: #FCA13F;
+  background-color: @active_color;
 }
 
 .progress-bar-danger {
@@ -5850,7 +5850,7 @@ h2.entry-title {
 .nano > .nano-pane > .nano-slider:hover,
 .nano > .nano-pane > .nano-slider:focus,
 .nano > .nano-pane > .nano-slider:active {
-  background: #ffbe4d;
+  background: @active_color;
 }
 
 .owl-carousel .owl-nav .owl-prev,
