wishlist and megamenu fixes

--- a/sites/all/modules/custom/md_megamenu/css/mega_menu.css
+++ b/sites/all/modules/custom/md_megamenu/css/mega_menu.css
@@ -731,6 +731,7 @@ a.ei-remove:hover,
 
 #mnu_type,
 #submenu-fullwidth,
+#hide-logged-in,
 #title_enabled {float: left; margin: 4px 5px 0 0}
 
 /* preview */
