--- a/sites/all/themes/md_hosoren/less/coding/libs/main.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/main.less
@@ -2294,24 +2294,24 @@ img {
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #ffb533;
-  border-color: #ffb533;
+  background-color: @active_color;
+  border-color: @active_color;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #ffb533;
-  border-color: #ffb533;
+  background-color: @active_color;
+  border-color: @active_color;
 }
 
 .btn-primary:active,
 .btn-primary.active,
 .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #e69200;
-  border-color: #e69200;
+  background-color: @active_color;
+  border-color: @active_color;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -2326,8 +2326,8 @@ img {
 .open > .btn-primary.dropdown-toggle:focus,
 .open > .btn-primary.dropdown-toggle.focus {
   color: #fff;
-  background-color: #e69200;
-  border-color: #e69200;
+  background-color: @active_color;
+  border-color: @active_color;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -2353,8 +2353,8 @@ img {
 .btn-primary.btn-outline.active,
 .open > .btn-primary.btn-outline.dropdown-toggle {
   color: #fff;
-  background-color: #e69200;
-  border-color: #e69200;
+  background-color: @active_color;
+  border-color: @active_color;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -2369,8 +2369,8 @@ img {
 .open > .btn-primary.btn-outline.dropdown-toggle:focus,
 .open > .btn-primary.btn-outline.dropdown-toggle.focus {
   color: #fff;
-  background-color: #e69200;
-  border-color: #e69200;
+  background-color: @active_color;
+  border-color: @active_color;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
