--- a/sites/all/themes/md_hosoren/css/coding/libs/main.css
+++ b/sites/all/themes/md_hosoren/css/coding/libs/main.css
@@ -1844,15 +1844,15 @@ img {
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #ffb533;
-  border-color: #ffb533;
+  background-color: #fff;
+  border-color: #fff;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #ffb533;
-  border-color: #ffb533;
+  background-color: #fff;
+  border-color: #fff;
 }
 .btn-primary:active,
 .btn-primary.active,
