--- a/sites/all/themes/md_hosoren/less/coding/libs/main.less
+++ b/sites/all/themes/md_hosoren/less/coding/libs/main.less
@@ -4522,11 +4522,16 @@ h2.entry-title {
 }
 
 .product-media {
-  background: #F7F7F7;
+  background: #fff;
   text-align: center;
   overflow: hidden;
   position: relative;
   z-index: 40;
+}
+
+.products .product-media {
+  background: #fff;
+  height: 320px;
 }
 
 .product-media a {
@@ -4746,6 +4751,15 @@ h2.entry-title {
 .cart-list > li:last-child .cart-item {
   margin-bottom: 0;
 }
+
+.cart-icon ul.whishlist li .whishlist-item a img {
+  height: auto !important;
+}
+
+.modal-product .product-media {
+  height: 490px;
+}
+
 
 .whishlist-item,
 .cart-item {
