--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -21,7 +21,6 @@
 
 // Theme specific.
 //@import 'coding/font.less';
-
 //@import 'coding/maintenance-mode.less';
 
 
@@ -50,4 +49,6 @@
 @import 'coding/base.less';
 @import 'coding/buttons.less';
 @import 'coding/categories_list.less';
+@import 'coding/checkout.less';
+@import 'coding/user_profile.less';
 @import 'coding/toolbar.less';
