--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -50,5 +50,6 @@
 @import 'coding/buttons.less';
 @import 'coding/categories_list.less';
 @import 'coding/checkout.less';
+@import 'coding/search.less';
 @import 'coding/user_profile.less';
 @import 'coding/toolbar.less';
