styles for main menu

--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -16,6 +16,8 @@
 @light_grey_color: #929da4;
 @lighter_grey_color: #ececec;
 
+@blue_color: #337ab7;
+
 @active_color: #005daf; //#ffa200
 @hover_btn_color: #006dbf;
 
@@ -51,5 +53,6 @@
 @import 'coding/categories_list.less';
 @import 'coding/checkout.less';
 @import 'coding/search.less';
+@import 'coding/main-menu.less';
 @import 'coding/user_profile.less';
 @import 'coding/toolbar.less';
