--- a/sites/all/themes/md_hosoren/css/style.css
+++ b/sites/all/themes/md_hosoren/css/style.css
@@ -18634,6 +18634,35 @@ ul li {
 .block-facetapi .widget-content .facetapi-facetapi-checkbox-links li .facet-count {
   float: right;
 }
+.awemenu-item .block .widget-title,
+.awemenu-item .block .contextual-links-wrapper {
+  display: none;
+}
+.awemenu-item .block .item-list ul {
+  margin: 0 !important;
+  list-style-type: none;
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+  -webkit-column-rule: 2px solid #337ab7;
+  /* Chrome, Safari, Opera */
+  -moz-column-rule: 2px solid #337ab7;
+  /* Firefox */
+  column-rule: 2px solid #337ab7;
+}
+.awemenu-item .block .item-list ul li {
+  margin: 0px !important;
+  padding: 0px !important;
+  font-size: 15px;
+}
+.awemenu-item .block .item-list ul li a {
+  color: #000 !important;
+}
+.awemenu-item .block .view-display-id-sale_block .item-list ul {
+  columns: 1;
+  -webkit-columns: 1;
+  -moz-columns: 1;
+}
 .page-user .profile ul li {
   list-style: none;
 }
