--- a/sites/all/themes/md_hosoren/less/style.less
+++ b/sites/all/themes/md_hosoren/less/style.less
@@ -16,6 +16,7 @@
 @light_grey_color: #929da4;
 @lighter_grey_color: #ececec;
 
+@grey_color: #333333;
 @blue_color: #337ab7;
 
 @active_color: #005daf; //#ffa200
