--- a/sites/all/themes/md_hosoren/less/coding/md_hosoren.less
+++ b/sites/all/themes/md_hosoren/less/coding/md_hosoren.less
@@ -653,20 +653,40 @@ input[type="submit"] + input[type="submit"]{
 		font-size: 30px;
 }
 
+.wishlist-text {
+    display: none;
+  }
+
 /* Button Wishlist */
 .logged-in .product-quickview-popup a.product-quick-whistlist, 
 .logged-in .shop_teaser a.product-quick-whistlist,
 .logged-in .product_full a.product-quick-whistlist {
-  text-indent: -99999px;
+  /*text-indent: -99999px;
   background: url("img/wishlist.png") no-repeat;
   height: 38px;
   width: 167px;
-  display: block;
+  display: block;*/
+  .wishlist-text {
+    display: inline-block;
+
+    padding: 10px 15px;
+
+    font-size: 13px;
+    letter-spacing: 1px;    
+    
+    background: @grey_color;
+    color: @white_color;
+    text-transform: uppercase;        
+  }
+
+  .icon {
+    display: none;
+  }
 }
 .logged-in .product-quickview-popup a.has_wishlist, 
 .logged-in .shop_teaser a.has_wishlist,
 .logged-in .product_full a.has_wishlist {
-  background: url("img/no_wishlist.png") no-repeat;
+  /*background: url("img/no_wishlist.png") no-repeat;*/
 }
 .product-quickview-popup .tooltip, 
 .logged-in .shop_teaser .tooltip,
